# esp32p4-fitness-mirror

./: CMakeLists.txt  LICENSE  README.md  idf_component_manager.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/camera_port/: CMakeLists.txt  app_camera_pipeline.hpp  app_video.c  app_video.h
components/human_face_detect/: human_face_detect.cpp  human_face_detect.hpp  idf_component.yml
components/human_face_recognition/: CMakeLists.txt  human_face_recognition.cpp  human_face_recognition.hpp  idf_component.yml
components/human_pose_detect/: CMakeLists.txt  human_pose_detect.cpp  human_pose_detect.hpp
components/human_pose_detect/cmake/: data_file_embed_asm_aligned.cmake
components/pedestrian_detect/: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  logo_lvgl.c  main.cpp  ui_text_zh.h
main/fonts/: font_zh_14.c  font_zh_16.c  font_zh_18.c  font_zh_20.c
main/mjpeg_player/: esp_lvgl_simple_player.c  esp_lvgl_simple_player.h  media_src_storage.h
tools/pc_pose_server/: server.py
